--- a/bookNow.html
+++ b/bookNow.html
@@ -5,8 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Book Now at Sheldon R. Larson Ranch</title>
         <link rel="icon" href="images/icon.png">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine"> 
-        <link rel="stylesheet" href="style.css" type="text/css">
+        <link rel="stylesheet" href="css/style.css" type="text/css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" type="text/css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
@@ -273,11 +272,9 @@
       </footer>
 
         <!--JQuery and JavaScript Declarations-->
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-        <script src="responsiveslides.min.js"></script>                  
-        <script src='main.js'></script>
+        <script src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>                 
+        <script src='js/main.js'></script>
         <!--For the page calendar-->
-        <script src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
     </body>
