--- a/contact.html
+++ b/contact.html
@@ -5,9 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Contact Us at Sheldon R. Larson Ranch</title>
         <link rel="icon" href="images/icon.png">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine"> 
-        <link rel="stylesheet" href="style.css" type="text/css">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" type="text/css"/>
+        <link rel="stylesheet" href="css/style.css" type="text/css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
 
@@ -123,8 +121,7 @@
 
         <!--<div>Icons made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/"                 title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"                 title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>-->
         <!--JQuery and JavaScript Declarations-->
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-        <script src="responsiveslides.min.js"></script>                  
-        <script src='main.js'></script>
+        <script src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>               
+        <script src='js/main.js'></script>
     </body>
 </html>
