--- a/map.html
+++ b/map.html
@@ -5,9 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Nearby Attractions Map at Sheldon R. Larson Ranch</title>
         <link rel="icon" href="images/icon.png">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine"> 
-        <link rel="stylesheet" href="style.css" type="text/css">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" type="text/css"/>
+        <link rel="stylesheet" href="css/style.css" type="text/css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
 
@@ -80,15 +78,11 @@
             <a title="Icons made by Freepik from www.flaticon.com is licensed by CC 3.0 BY" href="https://www.instagram.com/sheldonrlarsonranch/" target="_blank"><img src="images/instagram.svg" height="20" width="20" alt="link to our instagram page"/></a>
             <a title="Icons made by Freepik from www.flaticon.com is licensed by CC 3.0 BY" href="https://www.airbnb.com/rooms/6987200?source_impression_id=p3_1561644451_CppAMA6DbxaNfKE2&s=hCtNNbnM" target="_blank"><img src="images/airbnb.svg" height="20" width="20" alt="link to our airbnb page"/></a>
         </footer>
-
         <!--<div>Icons made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/"                 title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"                 title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>-->
+        
         <!--JQuery and JavaScript Declarations-->
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-        <script src="responsiveslides.min.js"></script>                  
-        <script src='main.js'></script>
-        <!--For the homepage calendar-->
-        <script src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>                 
+        <script src='js/main.js'></script>
+
     </body>
 </html>
