--- a/attractions.html
+++ b/attractions.html
@@ -196,10 +196,10 @@
             <a title="Icons made by Freepik from www.flaticon.com is licensed by CC 3.0 BY" href="https://www.instagram.com/sheldonrlarsonranch/" target="_blank"><img src="images/instagram.svg" height="20" width="20" alt="link to our instagram page"/></a>
             <a title="Icons made by Freepik from www.flaticon.com is licensed by CC 3.0 BY" href="https://www.airbnb.com/rooms/6987200?source_impression_id=p3_1561644451_CppAMA6DbxaNfKE2&s=hCtNNbnM" target="_blank"><img src="images/airbnb.svg" height="20" width="20" alt="link to our airbnb page"/></a>
         </footer>
-
         <!--<div>Icons made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/"                 title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"                 title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>-->
+       
         <!--JQuery and JavaScript Declarations-->
-        <script src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>                 
+        <script src="https://cdn.jsdelivr.net/gh/jquery/jquery@3.2.1/dist/jquery.min.js"></script>
         <script src='js/main.js'></script>
     </body>
 
