--- a/bookNow.html
+++ b/bookNow.html
@@ -272,7 +272,7 @@
       </footer>
 
         <!--JQuery and JavaScript Declarations-->
-        <script src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>                 
+        <script src="https://cdn.jsdelivr.net/gh/jquery/jquery@3.2.1/dist/jquery.min.js"></script>
         <script src='js/main.js'></script>
         <!--For the page calendar-->
         <script src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
