--- a/contact.html
+++ b/contact.html
@@ -121,7 +121,7 @@
 
         <!--<div>Icons made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/"                 title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"                 title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>-->
         <!--JQuery and JavaScript Declarations-->
-        <script src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>               
+        <script src="https://cdn.jsdelivr.net/gh/jquery/jquery@3.2.1/dist/jquery.min.js"></script>
         <script src='js/main.js'></script>
     </body>
 </html>
