--- a/gallery.html
+++ b/gallery.html
@@ -122,7 +122,7 @@
         </footer>
 
         <!--JQuery and JavaScript Declarations-->
-        <script src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>                
+        <script src="https://cdn.jsdelivr.net/gh/jquery/jquery@3.2.1/dist/jquery.min.js"></script>
         <script src='js/main.js'></script>
         <!--For the slideshow functionality-->
         <script src="js/lightbox-plus-jquery.min.js"></script>
