--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
 
         <!--For the homepage calendar-->
-        <script src="https://cdn.jsdelivr.net/gh/jquery/jquery@3.2.1/dist/jquery.min.js"></script>
+        <script src="js/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
         <!--For cycle slideshow-->
