--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,7 @@
         <link rel="icon" href="images/icon.png">
         <link rel="stylesheet" href="css/style.css" type="text/css">
         <link rel="stylesheet" href="css/lightbox.min.css" type="text/css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
     </head>
 
     <body>
@@ -122,7 +122,7 @@
         </footer>
 
         <!--JQuery and JavaScript Declarations-->
-        <script src="https://cdn.jsdelivr.net/gh/jquery/jquery@3.2.1/dist/jquery.min.js"></script>
+        <script src="js/jquery.min.js"></script>
         <script src='js/main.js'></script>
         <!--For the slideshow functionality-->
         <script src="js/lightbox-plus-jquery.min.js"></script>
