--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <title>Sheldon R. Larson Ranch</title>
         <link rel="icon" href="images/icon.png">
         <link rel="stylesheet" href="css/style.css" type="text/css">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" type="text/css"/>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/daterangepicker.css" type="text/css"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
     </head>
 
     <body id="homepage"> 
@@ -108,10 +108,10 @@
 
         <!--For the homepage calendar-->
         <script src="js/jquery.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+        <script src="js/moment.min.js"></script>
+        <script src="js/daterangepicker.min.js"></script>
         <!--For cycle slideshow-->
-        <script src="http://malsup.github.com/jquery.cycle2.js"></script>
+        <script src="js/jquery.cycle2.min.js"></script>
         <script src='js/main.js'></script>
     </body>
     
