--- a/mainCabin.html
+++ b/mainCabin.html
@@ -6,7 +6,7 @@
         <title>Main Cabin at Sheldon R. Larson Ranch</title>
         <link rel="icon" href="images/icon.png">
         <link rel="stylesheet" href="css/style.css" type="text/css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
     </head>
 
     <body id="main-cabin-body">
@@ -206,9 +206,9 @@
         </footer>
 
         <!--JQuery and JavaScript Declarations-->
-        <script src="https://cdn.jsdelivr.net/gh/jquery/jquery@3.2.1/dist/jquery.min.js"></script>
+        <script src="js/jquery.min.js"></script>
         <script src='js/main.js'></script>
-        <script src="http://malsup.github.com/jquery.cycle2.js"></script>
+        <script src="js/jquery.cycle2.min.js"></script>
 
         
     </body>
