--- a/otherEvents.html
+++ b/otherEvents.html
@@ -6,7 +6,7 @@
         <title>About Us at Sheldon R. Larson Ranch</title>
         <link rel="icon" href="images/icon.png">
         <link rel="stylesheet" href="css/style.css" type="text/css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
     </head>
 
     <body class="overview-page"> 
@@ -145,10 +145,10 @@
 
         <!--<div>Icons made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/"                 title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"                 title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>-->
         <!--JavaScript Declarations-->               
-        <script src="https://cdn.jsdelivr.net/gh/jquery/jquery@3.2.1/dist/jquery.min.js"></script>
+        <script src="js/jquery.min.js"></script>
         <script src='js/main.js'></script>
         <!-- Cycle 2 javascript-->
-        <script src="http://malsup.github.com/jquery.cycle2.js"></script>
+        <script src="js/jquery.cycle2.min.js"></script>
         
     </body>
 </html>
