--- a/overview.html
+++ b/overview.html
@@ -6,7 +6,7 @@
         <title>About Us at Sheldon R. Larson Ranch</title>
         <link rel="icon" href="images/icon.png">
         <link rel="stylesheet" href="css/style.css" type="text/css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
     </head>
 
     <body class="overview-page"> 
