--- a/cabinOverview.html
+++ b/cabinOverview.html
@@ -6,7 +6,7 @@
         <title>Country Cabins at Sheldon R. Larson Ranch</title>
         <link rel="icon" href="images/icon.png">
         <link rel="stylesheet" href="css/style.css" type="text/css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
+        <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
     </head>
 
     <body>
@@ -35,8 +35,8 @@
                 <li><a href="availability.html">Availability</a></li>
                 <li><a href="attractions.html">Attractions</a></li>
                 <li><a href="map.html">Map</a></li>
-                <li id="menu-icon" class="menu-trigger"><a><i class="fa fa-bars menu-icon"></i></a></li>
-                <li id="menu-close-icon" class="menu-close"><a><i class="fa fa-times close-icon"></i></a></li>
+                <li id="menu-icon" class="menu-trigger"><a><i class="fas fa-bars menu-icon"></i></a></li>
+                <li id="menu-close-icon" class="menu-close"><a><i class="fas fa-times close-icon"></i></a></li>
             </ul>
         </nav>
 
@@ -83,16 +83,16 @@
                 </div>
                 <div class="cabin-overview-cabins-text">
                     <a href="mainCabin.html"><h3>Main Cabin</h3></a>
-                    <p><i class="fa fa-map-marker cabin-overview-icon"></i> Ephraim, UT</p>
+                    <p><i class="fas fa-map-marker-alt cabin-overview-icon"></i> Ephraim, UT</p>
                     <div class="cabin-overview-text-column-left">
-                        <p><span>6</span> Guests</p>
-                        <p><span>4</span> Beds</p>
-                        <p><span>1</span> Bathroom</p>
+                        <p><i class="fas fa-user-friends cabin-overview-icon cabin-overview-icon-right"></i> 6</p> 
+                        <p><i class="fas fa-bed cabin-overview-icon cabin-overview-icon-right"></i> 4</p> 
+                        <p><i class="fas fa-bath cabin-overview-icon cabin-overview-icon-right"></i> 1</p> 
                     </div>
                     <div class="cabin-overview-text-column-right">
                         <p><img src="images/fridge_1.png" class="fridge-icon" alt="fridge icon"> Full Kitchen</p>   
-                        <p><i class="fa fa-car cabin-overview-icon cabin-overview-icon-right"></i> Off-Street Parking</p> 
-                        <p><i class="fa fa-paw cabin-overview-icon cabin-overview-icon-right"></i> Pets Allowed*</p>
+                        <p><i class="fas fa-car cabin-overview-icon cabin-overview-icon-right"></i> Off-Street Parking</p> 
+                        <p><i class="fas fa-paw cabin-overview-icon cabin-overview-icon-right"></i> Pets Allowed*</p>
                     </div>
                 </div>
                 <div class="cabin-overview-cabins-price">
@@ -111,16 +111,16 @@
                     </div>
                     <div class="cabin-overview-cabins-text">
                         <a href="guestCabin.html"><h3>Guest Cabin</h3></a>
-                        <p><i class="fa fa-map-marker cabin-overview-icon"></i> Ephraim, UT</p>
+                        <p><i class="fas fa-map-marker-alt cabin-overview-icon"></i> Ephraim, UT</p>
                         <div class="cabin-overview-text-column-left">
-                            <p><span>4</span> Guests</p>
-                            <p><span>2</span> Beds</p>
-                            <p><span>1</span> Bathroom</p>
+                            <p><i class="fas fa-user-friends cabin-overview-icon cabin-overview-icon-right"></i> 4</p> 
+                        <p><i class="fas fa-bed cabin-overview-icon cabin-overview-icon-right"></i> 2</p> 
+                        <p><i class="fas fa-bath cabin-overview-icon cabin-overview-icon-right"></i> 1</p> 
                         </div>
                         <div class="cabin-overview-text-column-right">
                             <p><img src="images/fridge_1.png" class="fridge-icon" alt="fridge icon"> Full Kitchen</p>   
-                            <p><i class="fa fa-car cabin-overview-icon cabin-overview-icon-right"></i> Off-Street Parking</p> 
-                            <p><i class="fa fa-paw cabin-overview-icon cabin-overview-icon-right"></i> Pets Allowed*</p>
+                            <p><i class="fas fa-car cabin-overview-icon cabin-overview-icon-right"></i> Off-Street Parking</p> 
+                            <p><i class="fas fa-paw cabin-overview-icon cabin-overview-icon-right"></i> Pets Allowed*</p>
                         </div>
                     </div>
                     <div class="cabin-overview-cabins-price">
@@ -140,16 +140,16 @@
                     <div class="cabin-overview-cabins-text">
                         <a href="mainCabin.html"><h3>Both Cabins Discount</h3></a>
                         <p>*See individual cabin pages for more details</p>
-                        <p><i class="fa fa-map-marker cabin-overview-icon"></i> Ephraim, UT</p>
+                        <p><i class="fas fa-map-marker-alt cabin-overview-icon"></i> Ephraim, UT</p>
                         <div class="cabin-overview-text-column-left">
-                            <p><span>10</span> Guests</p>
-                            <p><span>6</span> Beds</p>
-                            <p><span>2</span> Bathrooms</p>
+                            <p><i class="fas fa-user-friends cabin-overview-icon cabin-overview-icon-right"></i> 10</p> 
+                            <p><i class="fas fa-bed cabin-overview-icon cabin-overview-icon-right"></i> 6</p> 
+                            <p><i class="fas fa-bath cabin-overview-icon cabin-overview-icon-right"></i> 2</p> 
                         </div>
                         <div class="cabin-overview-text-column-right">
                             <p><img src="images/fridge_1.png" class="fridge-icon" alt="fridge icon"> Full Kitchens</p>   
-                            <p><i class="fa fa-car cabin-overview-icon cabin-overview-icon-right"></i> Off-Street Parking</p> 
-                            <p><i class="fa fa-paw cabin-overview-icon cabin-overview-icon-right"></i> Pets Allowed*</p>
+                            <p><i class="fas fa-car cabin-overview-icon cabin-overview-icon-right"></i> Off-Street Parking</p> 
+                            <p><i class="fas fa-paw cabin-overview-icon cabin-overview-icon-right"></i> Pets Allowed*</p>
                         </div>
                     </div>
                     <div class="cabin-overview-cabins-price">
