--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
         <title>Contact Us at Sheldon R. Larson Ranch</title>
         <link rel="icon" href="images/icon.png">
         <link rel="stylesheet" href="css/style.css" type="text/css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
+        <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
     </head>
 
     <body> 
@@ -35,8 +35,8 @@
                 <li><a href="availability.html">Availability</a></li>
                 <li><a href="attractions.html">Attractions</a></li>
                 <li><a href="map.html">Map</a></li>
-                <li id="menu-icon" class="menu-trigger"><a><i class="fa fa-bars menu-icon"></i></a></li>
-                <li id="menu-close-icon" class="menu-close"><a><i class="fa fa-times close-icon"></i></a></li>
+                <li id="menu-icon" class="menu-trigger"><a><i class="fas fa-bars menu-icon"></i></a></li>
+                <li id="menu-close-icon" class="menu-close"><a><i class="fas fa-times close-icon"></i></a></li>
             </ul>
         </nav>
 
@@ -80,22 +80,22 @@
                 <h3>Contact Us</h3>
                 <h4>Contact us with any questions and we'll get back to you as soon as possible!</h4>
                 <fieldset>
-                <input id= "contact-name" placeholder="Your name" type="text" tabindex="1" required autofocus>
+                    <input id= "contact-name" placeholder="Your name" type="text" tabindex="1" required autofocus>
                 </fieldset>
                 <fieldset>
-                <input id="contact-email" placeholder="Your Email Address" type="email" tabindex="2" required>
+                    <input id="contact-email" placeholder="Your Email Address" type="email" tabindex="2" required>
                 </fieldset>
                 <fieldset>
-                <input id="contact-phone" placeholder="Your Phone Number (optional)" type="tel" tabindex="3">
+                    <input id="contact-phone" placeholder="Your Phone Number (optional)" type="tel" tabindex="3">
                 </fieldset>
                 <fieldset>
-                <input id="contact-subject" placeholder="Subject" type="text" tabindex="4">
+                    <input id="contact-subject" placeholder="Subject" type="text" tabindex="4">
                 </fieldset>
                 <fieldset>
-                <textarea id="contact-message" placeholder="Type your message here...." tabindex="5" required></textarea>
+                    <textarea id="contact-message" placeholder="Type your message here...." tabindex="5" required></textarea>
                 </fieldset>
                 <fieldset>
-                <button type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
+                    <button type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
                 </fieldset>
             </form>
 
@@ -103,9 +103,9 @@
                 <div>
                     <h3>Connect with us</h3>
                     <h4>You may also contact us anytime at:</h4>
-                    <a href="mailto:sheldonrlarsonranch@gmail.com"><i class="fa fa-envelope-o contact-icon"></i>
+                    <a href="mailto:sheldonrlarsonranch@gmail.com"><i class="fas fa-envelope contact-icon"></i>
                     <h5>SheldonRLarsonRanch@gmail.com</h5></a>
-                    <a href="tel:435-340-0075"><i class="fa fa-phone contact-icon"></i>
+                    <a href="tel:435-340-0075"><i class="fas fa-phone contact-icon"></i>
                     <h5>(435) 340-0075</h5></a>
                 </div>
             </div>
