--- a/mainCabin.html
+++ b/mainCabin.html
@@ -6,7 +6,7 @@
         <title>Main Cabin at Sheldon R. Larson Ranch</title>
         <link rel="icon" href="images/icon.png">
         <link rel="stylesheet" href="css/style.css" type="text/css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
+        <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
     </head>
 
     <body id="main-cabin-body">
@@ -35,8 +35,8 @@
                 <li><a href="availability.html">Availability</a></li>
                 <li><a href="attractions.html">Attractions</a></li>
                 <li><a href="map.html">Map</a></li>
-                <li id="menu-icon" class="menu-trigger"><a><i class="fa fa-bars menu-icon"></i></a></li>
-                <li id="menu-close-icon" class="menu-close"><a><i class="fa fa-times close-icon"></i></a></li>
+                <li id="menu-icon" class="menu-trigger"><a><i class="fas fa-bars menu-icon"></i></a></li>
+                <li id="menu-close-icon" class="menu-close"><a><i class="fas fa-times close-icon"></i></a></li>
             </ul>
         </nav>
 
@@ -74,11 +74,11 @@
             <h1>Main Cabin</h1>
             <p>Plenty of room for the entire family in this Country Cabin rental!</p>
             <div class="cabin-overview-icon-container">
-                <p><i class="fa fa-users cabin-overview-icon cabin-overview-icon-right"></i> 6</p> 
-                <p><i class="fa fa-bed cabin-overview-icon cabin-overview-icon-right"></i> 4</p>
+                <p><i class="fas fa-user-friends cabin-overview-icon cabin-overview-icon-right"></i> 6</p> 
+                <p><i class="fas fa-bed cabin-overview-icon cabin-overview-icon-right"></i> 4</p>
                 <p><img src="images/fridge_1.png" class="fridge-icon" alt="fridge icon"> Kitchen</p>   
-                <p><i class="fa fa-car cabin-overview-icon cabin-overview-icon-right"></i> Parking</p> 
-                <p><i class="fa fa-paw cabin-overview-icon cabin-overview-icon-right"></i> Pets*</p>
+                <p><i class="fas fa-car cabin-overview-icon cabin-overview-icon-right"></i> Parking</p> 
+                <p><i class="fas fa-paw cabin-overview-icon cabin-overview-icon-right"></i> Pets*</p>
                 <!--
                 <div class="reviews-container">
                     <p id="cabin-reviews">*****</p><br>
