--- a/otherEvents.html
+++ b/otherEvents.html
@@ -6,7 +6,7 @@
         <title>About Us at Sheldon R. Larson Ranch</title>
         <link rel="icon" href="images/icon.png">
         <link rel="stylesheet" href="css/style.css" type="text/css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
+        <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
     </head>
 
     <body class="overview-page"> 
@@ -35,8 +35,8 @@
                 <li><a href="availability.html">Availability</a></li>
                 <li><a href="attractions.html">Attractions</a></li>
                 <li><a href="map.html">Map</a></li>
-                <li id="menu-icon" class="menu-trigger"><a><i class="fa fa-bars menu-icon"></i></a></li>
-                <li id="menu-close-icon" class="menu-close"><a><i class="fa fa-times close-icon"></i></a></li>
+                <li id="menu-icon" class="menu-trigger"><a><i class="fas fa-bars menu-icon"></i></a></li>
+                <li id="menu-close-icon" class="menu-close"><a><i class="fas fa-times close-icon"></i></a></li>
             </ul>
         </nav>
 
@@ -70,7 +70,7 @@
         <div id="overlay"></div>
 
         <div class="overview-section-spacer"></div>
-        <i class="fa fa-chevron-down fa-lg scroll-down-icon"></i>
+        <i class="fas fa-chevron-down fa-lg scroll-down-icon"></i>
 
         <!--Weddings Section-->
         <div class="overview-section1">
