--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@
                 </select>
             </div>
             <div class="input-grp">
-                <i class="far fa-calendar-alt icon"></i>
-                <input id="date-selector" class="form-control select-date" type="text" name="daterange"/>
+                <input id="date-selector" class="form-control select-date" type="text" name="daterange" readonly="true"/>
             </div>
             <div class="input-grp">
                 <button type="submit" class="btn btn-primary submit" id="book-now-2">Book Now!</button>
