--- a/bookNow.html
+++ b/bookNow.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
     </head>
 
-    <body>
+    <body class="white-background">
         <!-- Header -->
         <nav style="background-color: rgba(255,255,255,1)">
             <div class="logo-title-container">
