--- a/map.html
+++ b/map.html
@@ -71,7 +71,7 @@
 
         <div class="map-container">
             <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1GllTUOl9d9QD_GAVsYzoRNSFgxHPmlfb"></iframe>
-            <!--<button type="button" class="map-howTo">How To Use Map</button>-->
+            <button type="button" class="map-howTo">How To Use Map</button>
         </div>
         
         <footer>
