--- a/mainCabin.html
+++ b/mainCabin.html
@@ -4,7 +4,7 @@
         <meta charset=utf-8>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Main Cabin at Sheldon R. Larson Ranch</title>
-        <link rel="icon" href="images/icon.png">
+        <link rel="icon" href="images/icons/icon.png">
         <link rel="stylesheet" href="css/style.css" type="text/css">
         <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
     </head>
@@ -13,18 +13,18 @@
         <!-- Header -->
         <nav style="background-color: rgba(255,255,255,1)">
             <div class="logo-title-container">
-                <a href="index.html"><img class="logo-title" src="images/logo_title.png" alt=""></a>
+                <a href="index.html"><img class="logo-title" src="images/icons/logo_title.png" alt=""></a>
             </div>
             <ul>
                 <li><a href="bookNow.html">Book Now</a></li>
-                <li><a href="overview.html">About Us <span><img src="images/chevron-down.svg" height="10" width="7" alt="down arrow icon"/></span></a>
+                <li><a href="overview.html">About Us <span><img src="images/icons/chevron-down.svg" height="10" width="7" alt="down arrow icon"/></span></a>
                     <ul>
                         <li><a href="overview.html">Overview</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
                         <li><a href="reviews.html">Reviews</a></li>
                     </ul>
                 </li>
-                <li><a href="cabinOverview.html">Cabins <span><img src="images/chevron-down.svg" height="10" width="7" alt="down arrow icon"/></span></a>
+                <li><a href="cabinOverview.html">Cabins <span><img src="images/icons/chevron-down.svg" height="10" width="7" alt="down arrow icon"/></span></a>
                     <ul> 
                         <li><a href="mainCabin.html">Main Cabin</a></li>
                         <li><a href="guestCabin.html">Guest Cabin</a></li>
@@ -46,14 +46,14 @@
                 <ul class="menu-pages">
                     <li class="menu-page-link"><a href="index.html">Home</a></li>
                     <li class="menu-page-link"><a href="bookNow.html">Book Now</a></li>
-                    <li class="menu-page-link"><a id="about-us">About Us <span><img src="images/chevron-down.svg" height="10" width="7" alt="down arrow icon"/></span></a>
+                    <li class="menu-page-link"><a id="about-us">About Us <span><img src="images/icons/chevron-down.svg" height="10" width="7" alt="down arrow icon"/></span></a>
                         <ul id="about-us-sub-menu-pages">
                             <li><a href="overview.html">Overview</a></li>
                             <li><a href="contact.html">Contact Us</a></li>
                             <li><a href="reviews.html">Reviews</a></li>
                         </ul>
                     </li>
-                    <li  class="menu-page-link"><a id="cabins-menu">Cabins <span><img src="images/chevron-down.svg" height="10" width="7" alt="down arrow icon"/></span></a>
+                    <li  class="menu-page-link"><a id="cabins-menu">Cabins <span><img src="images/icons/chevron-down.svg" height="10" width="7" alt="down arrow icon"/></span></a>
                         <ul id="cabin-sub-menu-pages"> 
                             <li><a href="mainCabin.html">Main Cabin</a></li>
                             <li><a href="guestCabin.html">Guest Cabin</a></li>
@@ -75,7 +75,7 @@
             <div class="cabin-overview-icon-container">
                 <p><i class="fas fa-user-friends cabin-overview-icon cabin-overview-icon-right"></i> 6</p> 
                 <p><i class="fas fa-bed cabin-overview-icon cabin-overview-icon-right"></i> 4</p>
-                <p><img src="images/fridge_1.png" class="fridge-icon" alt="fridge icon"> Kitchen</p>   
+                <p><img src="images/icons/fridge_1.png" class="fridge-icon" alt="fridge icon"> Kitchen</p>   
                 <p><i class="fas fa-car cabin-overview-icon cabin-overview-icon-right"></i> Parking</p> 
                 <p><i class="fas fa-paw cabin-overview-icon cabin-overview-icon-right"></i> Pets*</p>
                 <!--
@@ -97,10 +97,10 @@
 
                 <div class="cycle-caption cabin-image-caption"></div>
 
-                <img class="cabin-image-carousel-img" src="images/home-1_8-5.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/home-2_8-5.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/home-3_8-5.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/home-4_8-5.jpg" alt="">
+                <img class="cabin-image-carousel-img" src="images/home-1.jpg" alt="">
+                <img class="cabin-image-carousel-img" src="images/home-2.jpg" alt="">
+                <img class="cabin-image-carousel-img" src="images/home-3.jpg" alt="">
+                <img class="cabin-image-carousel-img" src="images/home-4.jpg" alt="">
             </div>
 
 
@@ -199,9 +199,9 @@
 
 
         <footer style="background-color: rgba(255,255,255,1)">
-            <a title="Icons made by Freepik from www.flaticon.com is licensed by CC 3.0 BY" href="https://www.facebook.com/sheldonrlarsonranch/" target="_blank"><img src="images/facebook.svg" height="20" width="20" alt="link to our facebook page"/></a>
-            <a title="Icons made by Freepik from www.flaticon.com is licensed by CC 3.0 BY" href="https://www.instagram.com/sheldonrlarsonranch/" target="_blank"><img src="images/instagram.svg" height="20" width="20" alt="link to our instagram page"/></a>
-            <a title="Icons made by Freepik from www.flaticon.com is licensed by CC 3.0 BY" href="https://www.airbnb.com/rooms/6987200?source_impression_id=p3_1561644451_CppAMA6DbxaNfKE2&s=hCtNNbnM" target="_blank"><img src="images/airbnb.svg" height="20" width="20" alt="link to our airbnb page"/></a>
+            <a title="Icons made by Freepik from www.flaticon.com is licensed by CC 3.0 BY" href="https://www.facebook.com/sheldonrlarsonranch/" target="_blank"><img src="images/icons/facebook.svg" height="20" width="20" alt="link to our facebook page"/></a>
+            <a title="Icons made by Freepik from www.flaticon.com is licensed by CC 3.0 BY" href="https://www.instagram.com/sheldonrlarsonranch/" target="_blank"><img src="images/icons/instagram.svg" height="20" width="20" alt="link to our instagram page"/></a>
+            <a title="Icons made by Freepik from www.flaticon.com is licensed by CC 3.0 BY" href="https://www.airbnb.com/rooms/6987200?source_impression_id=p3_1561644451_CppAMA6DbxaNfKE2&s=hCtNNbnM" target="_blank"><img src="images/icons/airbnb.svg" height="20" width="20" alt="link to our airbnb page"/></a>
         </footer>
 
         <!--JQuery and JavaScript Declarations-->
