--- a/bookNow.html
+++ b/bookNow.html
@@ -121,7 +121,7 @@
                 <div class="date-select-container">
                   <i class="far fa-calendar-alt date-icon"></i>
                   <label>Dates</label>
-                  <input id="date-select" type="text" name="daterange"/>
+                  <input id="date-select" type="text" name="daterange" placeholder="01/01/2000 - 01/07/2000"/>
                 </div>
                 <div class="ppl-selection">
                   <div class="number-select">
@@ -274,7 +274,8 @@
         <!--JQuery and JavaScript Declarations-->
         <script src="js/jquery.min.js"></script>
         <script src='js/main.js'></script>
-        <!--For the page calendar-->
+        <script src='js/bookNow.js'></script>
+        <!--For the date range picker-->
         <script src="js/moment.min.js"></script>
         <script src="js/daterangepicker.min.js"></script>
     </body>
