--- a/contact.html
+++ b/contact.html
@@ -123,5 +123,7 @@
         <!--JQuery and JavaScript Declarations-->
         <script src="js/jquery.min.js"></script>
         <script src='js/main.js'></script>
+        <script src='js/contactUs.js'></script>
+
     </body>
 </html>
