--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </select>
             </div>
             <div class="input-grp">
-                <input id="date-selector" class="form-control select-date" type="text" name="daterange" readonly="true"/>
+                <input id="date-selector" class="form-control select-date" type="text" name="daterange" placeholder="Select Dates on Book Now Form" readonly="true"/>
             </div>
             <div class="input-grp">
                 <button type="submit" class="btn btn-primary submit" id="book-now-2">Book Now!</button>
